--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -1,8 +1,8 @@
 name: Terraform Plan
 on: push
 env: 
-  AWS_ACESS_KEY_ID: ${{secrets.AWS_ACESS_KEY_ID}}
-  AWS_SECRET_ACESS_KEY_ID: ${{secrets.AWS_SECRET_ACESS_KEY_ID}}
+  AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
+  AWS_SECRET_ACCESS_KEY_ID: ${{secrets.AWS_SECRET_ACCESS_KEY_ID}}
   TF_VAR_aws_pub_key: ${{secrets.AWS_PUBLIC_KEY}}
 
 jobs:
