--- a/.github/workflows/terraform-destroy.yml
+++ b/.github/workflows/terraform-destroy.yml
@@ -1,8 +1,8 @@
 name: Terraform Destroy
 on: workflow_dispatch
 env: 
-  AWS_ACESS_KEY_ID: ${{secrets.AWS_ACESS_KEY_ID}}
-  AWS_SECRET_ACESS_KEY_ID: ${{secrets.AWS_SECRET_ACESS_KEY_ID}}
+  AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
+  AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
   TF_VAR_aws_pub_key: ${{secrets.AWS_PUBLIC_KEY}}
 
 jobs:
